# jiang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
bootstrap/: README.md  buffer_bytes.jiang  buffer_int.jiang  codegen_sample.jiang  compiler.jiang  compiler_buffer_bytes.jiang  compiler_buffer_int.jiang  compiler_compiler_core.jiang  compiler_core.jiang  compiler_hir_store.jiang  compiler_intern_pool.jiang  compiler_jir_lower.jiang  compiler_jir_store.jiang  compiler_module_paths.jiang  compiler_parser_store.jiang  compiler_source_loader.jiang  compiler_symbol_store.jiang  compiler_token_store.jiang  compiler_type_store.jiang  hir.golden  hir.jiang  hir_compiler_core.jiang  hir_core.jiang  hir_hir_core.jiang  hir_lexer_core.jiang  hir_module_loader.jiang  hir_parser_core.jiang  hir_store.jiang  host_fs.jiang  host_runtime.jiang  intern_pool.jiang  jiang.build  jir.golden  jir.jiang  jir_lower.jiang  jir_parser_core.jiang  jir_store.jiang  lexer.golden  lexer.jiang  lexer_core.jiang  (+16 more)
bootstrap/entries/: compiler.jiang  compiler_buffer_bytes.jiang  compiler_buffer_int.jiang  compiler_compiler_core.jiang  compiler_hir_store.jiang  compiler_intern_pool.jiang  compiler_jir_lower.jiang  compiler_jir_store.jiang  compiler_module_paths.jiang  compiler_parser_store.jiang  compiler_source_loader.jiang  compiler_symbol_store.jiang  compiler_token_store.jiang  compiler_type_store.jiang  hir.jiang  hir_compiler_core.jiang  hir_hir_core.jiang  hir_lexer_core.jiang  hir_module_loader.jiang  hir_parser_core.jiang  jir.jiang  jir_parser_core.jiang  lexer.jiang  parser.jiang  probe_buffer_int.jiang  probe_token_store.jiang
compiler/: BOOTSTRAP.md  README.md  ast.jiang  c.jiang  compiler.jiang  driver.jiang  frontend.jiang  hir.jiang  jir.jiang  lexer.jiang  llvm.jiang  parser.jiang  parser_driver.jiang  semantic.jiang  semantic_invalid_dup_field.jiang  semantic_invalid_dup_struct.jiang  semantic_invalid_type.jiang  stage2_driver.c  token.jiang
compiler/entries/: compiler.jiang
compiler/frontend/: _tmp_diag_import_test.jiang  _tmp_multi_import_diag_test.jiang  _tmp_multi_support_import_test.jiang  _tmp_store_import_test.jiang  hir.jiang  hir_core.jiang  hir_nominal.jiang  hir_store.jiang  lexer.jiang  lexer_core.jiang  module_loader.jiang  parser.jiang  parser_core.jiang  parser_store.jiang  path_utils.jiang  source_loader.jiang  symbol_store.jiang  token_store.jiang  type_store.jiang
compiler/support/: buffer_bytes.jiang  buffer_int.jiang  diagnostic.jiang  intern_pool.jiang  list.jiang  source_file.jiang  span.jiang  text_buffer.jiang
doc/: develop.md  ebnf.md  jiang.md  plan_bootstrap_compiler_llvm.md  plan_bootstrap_llvm.md  plan_build_system.md  plan_llvm_c_api.md  plan_llvm_spike.md  plan_runtime_boundary.md  plan_stage1_default_llvm.md  plan_stage2_start.md
examples/: std_demo.jiang
examples/build_demo/: alt.jiang  greet.jiang  jiang.build  main.jiang
include/: arena.h  ast.h  codegen_info.h  generator.h  hashmap.h  hir.h  jir.h  jir_gen.h  lexer.h  llvm_emit.h  llvm_gen.h  lower.h  parser.h  runtime.h  semantic.h  token.h  vec.h
releases/: v0.2.0.md  v0.2.1.md
runtime/: host_runtime.c  stage1_host.c
script/: bootstrap_llvm_smoke.sh  build_stage1.sh  build_stage2.sh  build_stage2_legacy.sh  build_system_error_smoke.sh  build_system_smoke.sh  compiler_mainline_smoke.sh  compiler_parser_smoke.sh  compiler_semantic_smoke.sh  evaluate_default_llvm.sh  install_stage2_toolchain.sh  llvm_env.sh  llvm_spike_smoke.sh  package_stage2_release.sh  publish_github_release.sh  refresh_stage2_seed.sh  runtime_boundary_smoke.sh  stage0_hir_smoke.sh  stage1_build_system_smoke.sh  stage1_codegen_smoke.sh  stage1_complete_smoke.sh  stage1_hir_smoke.sh  stage1_jir_smoke.sh  stage1_link_smoke.sh  stage1_parser_smoke.sh  stage1_real_entry_smoke.sh  stage1_run_smoke.sh  stage1_selfhost_smoke.sh  stage1_smoke.sh  stage2_cli_smoke.sh  stage2_complete_smoke.sh  stage2_emit_c_smoke.sh  stage2_error_smoke.sh  stage2_llvm_error_smoke.sh  stage2_llvm_smoke.sh  stage2_run_smoke.sh  stage2_selfhost_smoke.sh  stage2_support_smoke.sh  test.sh  test_llvm_backend.sh
src/: arena.c  ast.c  generator.c  hashmap.c  hir.c  jir.c  jir_gen.c  lexer.c  llvm_emit.c  llvm_gen.c  lower.c  main.c  parser.c  semantic.c  vec.c
std/: assert.jiang  debug.jiang  file.jiang  fs.jiang  host_runtime.jiang  io.jiang  mem.jiang  path.jiang  std.jiang  string.jiang
tests/: anonymous_union_test.jiang  array_test.jiang  assert_fail.jiang  assert_test.jiang  b.jiang  binding_test.jiang  break_continue_test.jiang  enum_ns_defs.jiang  enum_test.jiang  extern_decl_test.jiang  extern_import_test.jiang  fail_pointer.jiang  fail_redef.jiang  fail_struct_init_check.jiang  fail_undef.jiang  fail_utf8_identifier.jiang  fail_visibility_field.jiang  fail_visibility_init.jiang  func_test.jiang  hello.jiang  if_test.jiang  import_test.jiang  jir_float_test.jiang  llvm_fs_spike_sample.jiang  llvm_multi_module_sample.jiang  llvm_spike_sample.jiang  llvm_std_spike_sample.jiang  loop_test.jiang  namespace_enum_test.jiang  namespace_test.jiang  nested_path_test.jiang  new_array_test.jiang  new_test.jiang  pass_pointer.jiang  project_integration_test.jiang  recursive_test.jiang  secret.jiang  shadow_test.jiang  slice_test.jiang  stage0_hir.golden  (+11 more)
tests/dir/: a.jiang  ffi_runtime.jiang
tests/project/: math.jiang  model.jiang
tests/samples/: alias_import_function_minimal.jiang  alias_import_type_minimal.jiang  array_minimal.jiang  array_to_slice_arg_minimal.jiang  assert_minimal.jiang  assign_minimal.jiang  break_continue_minimal.jiang  call_result_field_minimal.jiang  enum_minimal.jiang  fields_minimal.jiang  for_indexed_mutable_tuple_binding_minimal.jiang  for_indexed_typed_minimal.jiang  for_infer_range_minimal.jiang  for_item_array_minimal.jiang  for_mutable_binding_minimal.jiang  for_range_minimal.jiang  generic_decl_minimal.jiang  generic_import_func_helper.jiang  generic_import_struct_helper.jiang  generic_import_struct_minimal.jiang  if_minimal.jiang  infer_array_length_minimal.jiang  infer_global_minimal.jiang  (+127 more)
(+163 files in other folders)
